# SocketChat

./: README.md
SocketChatApp/: CMakeLists.txt
SocketChatApp/src/: CMakeLists.txt
SocketChatApp/src/eth/: CMakeLists.txt  eth_ipc_types.h  eth_socket.c  eth_socket.h  socket.c  socket.h
SocketChatApp/src/gui/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
